<resources>
    <string name="app_name">My Calculator</string>
    <string name="splash_screen_image">Splash Screen Image</string>
    <string name="math_is_mate">Math is Mate</string>
    <string name="backspace"><![CDATA[<x]]></string>
    <string name="clear_history">Clear History</string>
    <string name="history">History :</string>
    <string name="no_history">No History</string>
    <string name="acos">acos</string>
    <string name="asin">asin</string>
    <string name="atan">atan</string>
    <string name="history_icon">History Icon</string>
    <string name="c">C</string>
    <string name="opbrac">(</string>
    <string name="clbrac">)</string>
    <string name="_2nd">2nd</string>
    <string name="e">e</string>
    <string name="sinh">sinh</string>
    <string name="cosh">cosh</string>
    <string name="tanh">tanh</string>
    <string name="sin">sin</string>
    <string name="sqrt">√</string>
    <string name="modulo">%</string>
    <string name="exp">x^</string>
    <string name="divide">/</string>
    <string name="cos">cos</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">*</string>
    <string name="tan">tan</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="plus">+</string>
    <string name="permutative">x!</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="log">log</string>
    <string name="comma">.</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
    <string name="phi">π</string>
    <string name="log10">log10</string>
</resources>