<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/list_item_spacing_half"
        android:paddingHorizontal="@dimen/list_item_spacing">

        <TextView
            android:id="@+id/label_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/button_clear_history"
            android:text="@string/history"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:fontFamily="@font/poppins_regular"/>

        <ImageButton
            android:id="@id/button_clear_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/clear_history"
            android:src="@drawable/ic_delete" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_no_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_spacing"
        android:text="@string/no_history"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_regular"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/list_item_spacing_half"
        android:paddingHorizontal="@dimen/list_item_spacing"
        tools:listitem="@layout/items_history" />

</LinearLayout>
